fix: SavedEvents -> z-index

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/SavedEvents.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/SavedEvents.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: fit-content;
     min-height: 100%;
-    z-index: 10;
+    z-index: 5;
     padding: 1rem;
     padding-top: 12vh;
 
